# IMao-Wuthering-Waves

./: .gitignore  CMakeLists.txt  README.en.md  README.md
Docs/: Compile_en.md  Compile_zh-Hans.md
IMao-Core/paddleocr_cpp_infer/lib/: ppocr.lib
IMao-Core/src/: DLL_API.cpp  DLL_API.h  IMao-Core.rc  Main.cpp  pch.h  resource.h  util.cpp  util.h
IMao-Core/src/App/: App.cpp  App.h
IMao-Core/src/Coordinate/: CoordinateStruct.h
IMao-Core/src/Coordinate/IdentifyWorldCoordinates/: IdentifyWorldCoordinates.cpp  IdentifyWorldCoordinates.h
IMao-Core/src/Coordinate/locationCalculator/: MapCoordinate.cpp  MapCoordinate.h  RelativeCoordinates.cpp  RelativeCoordinates.h  ScreenCoordinate.cpp  ScreenCoordinate.h
IMao-Core/src/Feature/Match/: FeatureMatch.cpp  FeatureMatch.h
IMao-Core/src/Feature/Processing/: FeatureProcessing.cpp  FeatureProcessing.h
IMao-Core/src/ImageProcessing/: ImageProcessing.cpp  ImageProcessing.h
IMao-Core/src/ImguiDraw/: ImGuiOverWindows.cpp  ImGuiOverWindows.h
IMao-Core/src/ImguiDraw/InteractiveInterface/: Debug.cpp  Debug.h  Notification.cpp  Notification.h
IMao-Core/src/ImguiDraw/Items/: DrawItemBase.cpp  DrawItemBase.h  DrawItemOnGameMap.cpp  DrawItemOnGameMap.h  DrawItemOnMinMap.cpp  DrawItemOnMinMap.h
IMao-Core/src/Resource/: itemsData_Fabricatorium.json  itemsData_Tethys.json
IMao-Core/src/WindowsCapture/BitBltCapture/: BitBltCapture.cpp  BitBltCapture.h
IMao-Core/src/WindowsCapture/WindowsGraphicsCapture/: CaptureSnapshot.cpp  CaptureSnapshot.h  DirtyRegionVisualizer.cpp  DirtyRegionVisualizer.h  SimpleCapture.cpp  SimpleCapture.h
IMao-WinUI/: App.xaml  App.xaml.cs  IMao-WinUI.csproj  IMao-WinUI.csproj.Backup.tmp  IMaoCoreAPI.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest  appsettings.json
IMao-WinUI.Core/: IMao-WinUI.Core.csproj
IMao-WinUI.Core/Contracts/Services/: IFileService.cs
IMao-WinUI.Core/Helpers/: Json.cs
IMao-WinUI.Core/Services/: FileService.cs
IMao-WinUI/Activation/: ActivationHandler.cs  AppNotificationActivationHandler.cs  DefaultActivationHandler.cs  IActivationHandler.cs
IMao-WinUI/Behaviors/: NavigationViewHeaderBehavior.cs  NavigationViewHeaderMode.cs
IMao-WinUI/Contracts/Services/: IActivationService.cs  IAppNotificationService.cs  ILocalSettingsService.cs  INavigationService.cs  INavigationViewService.cs  IPageService.cs  IThemeSelectorService.cs
IMao-WinUI/Contracts/ViewModels/: INavigationAware.cs
IMao-WinUI/Helpers/: BitBltRegistryHelper.cs  CheckVersion.cs  EnumToBooleanConverter.cs  FrameExtensions.cs  NavigationHelper.cs  ResourceExtensions.cs  RuntimeHelper.cs  SettingsStorageExtensions.cs  TitleBarHelper.cs
IMao-WinUI/Models/: LocalSettingsOptions.cs
IMao-WinUI/Properties/: launchsettings.json
IMao-WinUI/Services/: ActivationService.cs  AppNotificationService.cs  LocalSettingsService.cs  NavigationService.cs  NavigationViewService.cs  PageService.cs  ThemeSelectorService.cs
IMao-WinUI/StringItems/: StringItems.cs  StringItems.json
IMao-WinUI/Strings/en-US/: Resources.resw
IMao-WinUI/Strings/zh-CN/: Resources.resw
IMao-WinUI/Styles/: Thickness.xaml
IMao-WinUI/ViewModels/: FilterViewModel.cs  FunctionViewModel.cs  SettingsViewModel.cs  ShellViewModel.cs  StartViewModel.cs
IMao-WinUI/Views/: FilterPage.xaml  FilterPage.xaml.cs  FunctionPage.xaml  FunctionPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  ShellPage.xaml  ShellPage.xaml.cs  StartPage.xaml  StartPage.xaml.cs  SuggestionDialog.xaml  SuggestionDialog.xaml.cs
Test/: main.cpp
